# BeautyBusinessScraper

./: .gitignore  LICENSE  README.md  pyproject.toml
src/scrapers/: base.py  beauty_wellness.py  bright_data.py  dentists.py  facebook.py  google_places.py
src/utils/: rate_limiter.py
tests/: sample_test_scraper.py
